# opengl_ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: simple_renderer.h
opengl_ros/: CMakeLists.txt  package.xml
opengl_ros/cfg/: opengl_ros.cfg
opengl_ros/launch/: color_extraction_cpu.launch  color_extraction_gpu.launch  depth_image_projection.launch  object_position_extraction.launch
opengl_ros/params/: color_extraction.yaml
opengl_ros/shader/: fs_color_extraction.glsl
opengl_ros/src/: color_extraction_cpu_node.cpp  color_extraction_cpu_nodecore.cpp  color_extraction_cpu_nodecore.h  dbscan.h  depth_image_projector_node.cpp  depth_image_projector_nodecore.cpp  depth_image_projector_nodecore.h  distance_matrix.h  object_position_extractor_node.cpp  object_position_extractor_nodecore.cpp  object_position_extractor_nodecore.h  simple_renderer_node.cpp  simple_renderer_nodecore.cpp  simple_renderer_nodecore.h
opengl_ros_lib/: CMakeLists.txt  README.md  package.xml
opengl_ros_lib/include/: depth_image_projector.h  object_position_extractor.h  simple_renderer.h
opengl_ros_lib/scripts/: test_frame_broadcaster.py
opengl_ros_lib/shader/: fs_depth_image_projection.glsl  fs_object_position_extraction.glsl  fs_rgb_to_occupancy_grid.glsl  gs_depth_image_projection.glsl  vs_depth_image_projection.glsl  vs_object_position_extraction.glsl  vs_passthrough.glsl
opengl_ros_lib/src/: depth_image_projector.cpp  object_position_extractor.cpp  (+5 more)
shader/: fs_null.glsl  fs_passthrough.glsl  vs_null.glsl
src/: main.cpp  simple_renderer.cpp
(+19 files in other folders)
